# interview-prep

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  cheatsheet.md  exercises.md  justfile
js/: main.js  main.test.js  main.ts  main_test.ts  package-lock.json  package.json  tsconfig.json
js/src/2026/: arrays.ts  binarySearch.ts  bits.ts  index.ts  linkedList.ts  queue.ts  recursion.ts  sorting.ts  stack.ts
js/test/2026/: arrays.test.ts  binarySearch.test.ts  (+6 more)
python/: pyproject.toml
python/solutions/2026/: README.md  arrays.py  linked_list.py
python/solutions/year_2026/: README.md  arrays.py  backtracking.py  binary_search.py  bits.py  conversions.py  dp.py  graph.py  greedy.py  heap.py  linked_list.py  maps.py  math_ops.py  queue_ds.py  recursion.py  sorting.py  stack.py  trees.py  two_pointers.py  union_find.py
python/src/interview_prep/: __init__.py  lib.py  linked_list.py
python/src/year_2026/: README.md  arrays.py  binary_search.py  bits.py  conversions.py  dp.py  maps.py  math_ops.py  monotonic_stack.py  queue_ds.py  sliding_window.py  sorting.py  stack.py  string_matching.py  trees.py  trie.py  types.py
python/test/: conftest.py  test_2026_arrays.py  test_2026_backtracking.py  test_2026_binary_search.py  test_2026_bits.py  test_2026_conversions.py  test_2026_dp.py  test_2026_graph.py  test_2026_greedy.py  test_2026_heap.py  test_2026_linked_list.py  test_2026_maps.py  test_2026_math_ops.py  test_2026_monotonic_stack.py  test_2026_queue.py  test_2026_recursion.py  test_2026_sliding_window.py  test_2026_sorting.py  test_2026_stack.py  test_2026_string_matching.py  test_2026_trees.py  test_2026_trie.py  test_2026_two_pointers.py  test_2026_union_find.py  test_lib.py  test_linked_list.py
rust/src/: lib.rs
scripts/: TODO.md  exercises.py  progress.py  progress_calendar.py  run-solution.sh  todo.py
scripts/progress/: __init__.py  __main__.py  commands_dsa.py  commands_study.py  db.py  interactive.py  models.py  parsing.py  visualization.py
