[project]
name = "interview-prep"
version = "0.1.0"
description = "Interview preparation code"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipython>=8.32.0",
    "jupyterlab>=4.3.5",
    "jupyterlab-vim>=4.1.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src", "."]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.9.9",
]
