[project]
name = "interview-prep"
version = "0.1.0"
description = "Interview preparation code"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipython>=8.32.0",
    "jupyterlab>=4.3.5",
    "jupyterlab-vim>=4.1.4",
    "matplotlib>=3.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/year_2026"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["test"]
addopts = [
    "-v",
    "--tb=short",
    "-ra",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.9.9",
]
